make sidenav fixed on mobile

--- a/modules/sidenav/sidenav.module.sass
+++ b/modules/sidenav/sidenav.module.sass
@@ -27,6 +27,7 @@
         font-size: 0.75rem
         padding: 0
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
+        position: fixed
         &[data-hidden="true"]
             margin-top: -90px
 
